--- a/videogames/static/css/style.css
+++ b/videogames/static/css/style.css
@@ -26,7 +26,7 @@ html { font-size: 62.5%; }
 ::selection {background: #c0e9b0; }
 ::-moz-selection { background: #c0e9b0; }
 
-body { display: block; background: #c7f090 url('img/bg.jpg'); padding: 0px 35px; background-attachment: fixed; background-size:100%;}
+body { display: block; background: #c7f090 url('../img/bg.jpg'); padding: 0px 35px; background-attachment: fixed; background-size:100%;}
 
 img { max-width: 100%; } 
 
