--- a/videogames/static/css/style.css
+++ b/videogames/static/css/style.css
@@ -34,7 +34,7 @@ header h1 { font-family: 'ketchum', Arial, sans-serif; color: #02FF11; font-size
 header h1 { position: absolute; top: 10px; left: 60px; letter-spacing: 0.1em; }
 #content h1 { font-family: 'Acme', Trebuchet MS, Arial, sans-serif; color: #565656; font-weight: bold; font-size: 2.1em; letter-spacing: 0.07em; text-shadow: none; margin-bottom: 7px; }
 
-#content h1.oneup { padding-left: 20px; background: url('img/1upsmall.png') 0px 5px no-repeat; }
+#content h1.oneup { padding-left: 20px; background: url('../img/1upsmall.png') 0px 5px no-repeat; }
 
 p { display: block; font-family: Arial, Tahoma, sans-serif; color: #343434; font-size: 1.3em; line-height: 1.4em; margin-bottom: 12px; }
 
@@ -51,7 +51,7 @@ header {
 display: block; 
 height: 140px; 
 position: relative;
-background: url('img/retrobanner.jpg') no-repeat; 
+background: url('../img/retrobanner.jpg') no-repeat; 
 background-size:cover;
 border-bottom-left-radius: 7px;
 border-bottom-right-radius: 7px;
@@ -69,7 +69,7 @@ nav { display: block; padding: 10px 8px; }
 nav ul { display: block; list-style: none; }
 
 nav ul li { display: inline-block; font-size: 1.95em; font-family: 'Gorditas', Tahoma, sans-serif; } 
-nav ul li a {background: url('img/buttonbg.png'); background-size:cover; display: inline-block; margin-right: 2px; color: #fff; text-shadow: 1px 1px 1px rgba(55, 100, 120, 0.7); padding: 5px 11px; color: rgb(209, 34, 34); border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; }
+nav ul li a {background: url('../img/buttonbg.png'); background-size:cover; display: inline-block; margin-right: 2px; color: #fff; text-shadow: 1px 1px 1px rgba(55, 100, 120, 0.7); padding: 5px 11px; color: rgb(209, 34, 34); border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; }
 nav ul li a:hover { background: #95d958; text-decoration: none; color: #526742; text-shadow: 0px 1px 0px rgba(55, 100, 120, 0.7); }
 
 
