--- a/videogames/templates/index.html
+++ b/videogames/templates/index.html
@@ -34,14 +34,14 @@
 			<h1 class="oneup">Welcome to Our Website!</h1>
 			<p>Throughout this website we explore the history of videogames, analyze sales and review data, and use machine learning to predict the next "hit" videogame. We'll also show off some cool artwork visualizations that we have created!</p>
 			
-			<p><img src="img/controllers.jpg" alt="Controllers Image" class="floatr" width=250 height=125> From the Atari 2600 to the XBox One, we'll categorize videogames by platform, publisher, and genre. Which platforms outshine the others? Which publishers release the most games? What genres tend to be most successful? These are several questions we will answer throughout this website.</p>
+			<p><img src="{{ url_for('img', filename='controllers.jpg') }}" alt="Controllers Image" class="floatr" width=250 height=125> From the Atari 2600 to the XBox One, we'll categorize videogames by platform, publisher, and genre. Which platforms outshine the others? Which publishers release the most games? What genres tend to be most successful? These are several questions we will answer throughout this website.</p>
 			
 			<p>The navigation bar at the top will take you through each level of our analysis, beginning with Trends in which we use Tableau to create interactive visualizations of trends over time, and ending with Machine Learning to make a prediction for the next hit game!</p>
 			
             <p>We hope you enjoy your experience here.</p> 
             
             <h2><blink>Thanks for playing!</blink></h2></p>
-			<center><img src="img/video-game-gif-20.gif" alt="Videogame Gif" width=500 height=171></center>
+			<center><img src="{{ url_for('img', filename='video-game-gif-20.gif') }}" alt="Videogame Gif" width=500 height=171></center>
 </section>
 		
 
