--- a/videogames/templates/about.html
+++ b/videogames/templates/about.html
@@ -19,7 +19,7 @@
 		
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="/">Home</a></li>
 				<li><a href="about.html">About Us</a></li>
 				<li><a href="mosaic.html">Mosaic</a></li>
 				<li><a href="trends.html">Trends</a></li>
@@ -38,22 +38,22 @@
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
 
-			<p><img src="img/andrew.PNG" alt="Ashley" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
+			<p><img src="img/andrew.PNG" alt="Andrew" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
 			
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
 
-			<p><img src="img/ian.PNG" alt="Ashley" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
+			<p><img src="img/ian.PNG" alt="Ian" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
 			
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
 
-			<p><img src="img/jason.PNG" alt="Ashley" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
+			<p><img src="img/jason.PNG" alt="Jason" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
 			
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
 
-			<p><img src="img/umu.PNG" alt="Ashley" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
+			<p><img src="img/umu.PNG" alt="Umu" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
 			
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
