--- a/videogames/templates/about.html
+++ b/videogames/templates/about.html
@@ -63,7 +63,7 @@
 		<footer>
 			<span class="copy"></span>
 			<ul class="footlinks"><strong>
-				<li><a href="index.html"><img src="1up.png" height=75 width=75></a></li></strong></img>
+				<li><a href="/"><img src="http://icons.iconarchive.com/icons/ph03nyx/super-mario/256/Retro-Mushroom-1UP-3-icon.png" height=75 width=75></a></li></strong></img>
 			</ul>
 		</footer>
 	</strong>
