--- a/videogames/templates/mosaic.html
+++ b/videogames/templates/mosaic.html
@@ -6,14 +6,9 @@
   <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
   <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no"> -->
-  <link rel="shortcut icon" href="1up.png">
-  <link rel="icon" href="1up.png">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link href='http://fonts.googleapis.com/css?family=Acme|Gorditas' rel='stylesheet' type='text/css'>
-  <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-  <![endif]-->
+  <link rel="shortcut icon" href="http://icons.iconarchive.com/icons/ph03nyx/super-mario/256/Retro-Mushroom-1UP-3-icon.png">
+  <link rel="icon" href="http://icons.iconarchive.com/icons/ph03nyx/super-mario/256/Retro-Mushroom-1UP-3-icon.png">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
 <body>
@@ -24,7 +19,7 @@
 		
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="/">Home</a></li>
 				<li><a href="about.html">About Us</a></li>
 				<li><a href="mosaic.html">Mosaic</a></li>
 				<li><a href="trends.html">Trends</a></li>
@@ -51,7 +46,7 @@
 		<footer>
 			<span class="copy"></span>
 			<ul class="footlinks"><strong>
-				<li><a href="index.html"><img src="1up.png" height=75 width=75></a></li></strong></img>
+				<li><a href="/"><img src="http://icons.iconarchive.com/icons/ph03nyx/super-mario/256/Retro-Mushroom-1UP-3-icon.png" height=75 width=75></a></li></strong></img>
 			</ul>
 		</footer>
 	</strong>
