--- a/videogames/templates/genres.html
+++ b/videogames/templates/genres.html
@@ -34,7 +34,7 @@
 			<h1 class="oneup">Genres!</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacus metus, auctor non porta a, hendrerit elementum mi. Vivamus ac porta lacus. Quisque hendrerit urna id <a href="#">arcu tincidunt commodo</a>. Pellentesque ut dolor quam, mollis molestie nulla. Pellentesque nibh nisl, porta vel vulputate ut, iaculis ac lectus. Maecenas id nisl at orci rutrum hendrerit. Aenean ut arcu erat, eget egestas nunc. Etiam sed eleifend dui.</p>
 			
-			<p><img src="img/controllers.jpg" alt="Controllers Image" class="floatr" width=250 height=125> Donec rhoncus orci id odio tristique semper eget in ipsum. Suspendisse potenti. Phasellus luctus quam commodo nisl consequat semper ut auctor elit. Mauris ante justo, tempus eget bibendum in, ullamcorper eu erat.</p>
+			<p><img src="https://pbs.twimg.com/media/DUcziIjXUAAyRAH.jpg" alt="Controllers Image" class="floatr" width=250 height=125> Donec rhoncus orci id odio tristique semper eget in ipsum. Suspendisse potenti. Phasellus luctus quam commodo nisl consequat semper ut auctor elit. Mauris ante justo, tempus eget bibendum in, ullamcorper eu erat.</p>
 			
 			<p>In turpis orci, tincidunt ut mollis sit amet, fermentum id sapien. Nulla dapibus lacus non est iaculis at luctus nunc porta. Pellentesque dui velit, tempus semper pharetra vel, porta non eros. Nulla dictum gravida tortor, sit amet molestie tellus semper a. Ut cursus hendrerit quam at accumsan.</p>
 			
