--- a/videogames/templates/index.html
+++ b/videogames/templates/index.html
@@ -19,7 +19,7 @@
 		
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="/">Home</a></li>
 				<li><a href="about.html">About Us</a></li>
 				<li><a href="mosaic.html">Mosaic</a></li>
 				<li><a href="trends.html">Trends</a></li>
@@ -40,7 +40,7 @@
 			
             <p>We hope you enjoy your experience here.</p> 
             
-            <h2><blink>Thanks for playing!</blink></h2></p>
+            <h2>Thanks for playing!</h2></p>
 			<center><img src="https://static.fjcdn.com/gifs/So+i+hear+you+like+90s+games_381f92_4779042.gif" alt="Videogame Gif" width=500 height=171></center>
 </section>
 		
