--- a/videogames/templates/about.html
+++ b/videogames/templates/about.html
@@ -43,17 +43,17 @@
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
 
-			<p><img src="img/ian.PNG" alt="Ian" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
+			<p><img src="img/ian.PNG" alt="Ian" class="floatleft" width=90 height=80> <h2>Ian Womack</h2></p>
 			
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
 
-			<p><img src="img/jason.PNG" alt="Jason" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
+			<p><img src="img/jason.PNG" alt="Jason" class="floatleft" width=90 height=80> <h2>Jason Lin</h2></p>
 			
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
 
-			<p><img src="img/umu.PNG" alt="Umu" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
+			<p><img src="img/umu.PNG" alt="Umu" class="floatleft" width=90 height=80> <h2>Umu Lamboi</h2></p>
 			
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
