Edited to show mosaic

--- a/videogames/templates/mosaic.html
+++ b/videogames/templates/mosaic.html
@@ -32,16 +32,10 @@
 		
 		<section id="content">
 			<h1 class="oneup">The Mosaic!</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacus metus, auctor non porta a, hendrerit elementum mi. Vivamus ac porta lacus. Quisque hendrerit urna id <a href="#">arcu tincidunt commodo</a>. Pellentesque ut dolor quam, mollis molestie nulla. Pellentesque nibh nisl, porta vel vulputate ut, iaculis ac lectus. Maecenas id nisl at orci rutrum hendrerit. Aenean ut arcu erat, eget egestas nunc. Etiam sed eleifend dui.</p>
-			
-			<p><img src="img/mosaic4.png" alt="Mosaic Image"  width=960 height=480> Donec rhoncus orci id odio tristique semper eget in ipsum. Suspendisse potenti. Phasellus luctus quam commodo nisl consequat semper ut auctor elit. Mauris ante justo, tempus eget bibendum in, ullamcorper eu erat.</p>
-			
-			<p>In turpis orci, tincidunt ut mollis sit amet, fermentum id sapien. Nulla dapibus lacus non est iaculis at luctus nunc porta. Pellentesque dui velit, tempus semper pharetra vel, porta non eros. Nulla dictum gravida tortor, sit amet molestie tellus semper a. Ut cursus hendrerit quam at accumsan.</p>
-			
-			<p>Quisque a purus nisl. Duis accumsan interdum rutrum. Fusce velit mi, feugiat eu laoreet sed, pellentesque ac augue. Phasellus commodo rhoncus tempor. Donec in turpis eu metus aliquam porttitor nec vitae tortor. Donec eu felis eget arcu interdum viverra rhoncus eget nunc. Etiam sed risus eleifend nisi consequat suscipit et in odio.</p>
-			
-			
-	</section>
+			<p>Insert mosaic description here</p>			
+			<p><img src="../img/mosaic4.png" alt="Mosaic Image"  width=960 height=480> 
+				
+		</section>
 		
 		<footer>
 			<span class="copy"></span>
