Edit to show the mosaic

--- a/videogames/templates/mosaic.html
+++ b/videogames/templates/mosaic.html
@@ -33,7 +33,7 @@
 		<section id="content">
 			<h1 class="oneup">The Mosaic!</h1>
 			<p>Insert mosaic description here</p>			
-			<p><img src="/../img/mosaic4.png" alt="Mosaic Image"  width=960 height=480> 
+			<p><img src="../img/mosaic4.png" alt="Mosaic Image" width=960 height=480> 
 				
 		</section>
 		
