--- a/videogames/templates/about.html
+++ b/videogames/templates/about.html
@@ -33,7 +33,7 @@
 		<section id="content">
 			<h1 class="oneup">Meet The Team!</h1>
 	
-			<p><img src="https://drive.google.com/open?id=1EHHVRHjtlRNg4CXTZpL7MRx2ilfQLrh7" alt="Ashley" class="floatleft" width=90 height=80> <h2>Ashley Na</h2></p>
+			<p><img src="img/ashley.PNG" alt="Ashley" class="floatleft" width=90 height=80> <h2>Ashley Na</h2></p>
 			
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
