--- a/videogames/templates/about.html
+++ b/videogames/templates/about.html
@@ -38,22 +38,22 @@
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
 
-			<p><img src="img/andrew.PNG" alt="Andrew" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
+			<p><img src="https://i.imgur.com/MyU7Y0h.png" alt="Andrew" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
 			
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
 
-			<p><img src="img/ian.PNG" alt="Ian" class="floatleft" width=90 height=80> <h2>Ian Womack</h2></p>
+			<p><img src="https://i.imgur.com/eD8U0bk.png" alt="Ian" class="floatleft" width=90 height=80> <h2>Ian Womack</h2></p>
 			
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
 
-			<p><img src="img/jason.PNG" alt="Jason" class="floatleft" width=90 height=80> <h2>Jason Lin</h2></p>
+			<p><img src="https://i.imgur.com/HxGo363.png" alt="Jason" class="floatleft" width=90 height=80> <h2>Jason Lin</h2></p>
 			
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
 
-			<p><img src="img/umu.PNG" alt="Umu" class="floatleft" width=90 height=80> <h2>Umu Lamboi</h2></p>
+			<p><img src="https://i.imgur.com/czGrVkl.png" alt="Umu" class="floatleft" width=90 height=80> <h2>Umu Lamboi</h2></p>
 			
 			<p>Favorite Videogame: </p>
 			<p>Favorite Character: </p>
