Changed section names

--- a/videogames/templates/about.html
+++ b/videogames/templates/about.html
@@ -23,8 +23,8 @@
 				<li><a href="about.html">About Us</a></li>
 				<li><a href="mosaic.html">Mosaic</a></li>
 				<li><a href="trends.html">Trends</a></li>
-				<li><a href="genres.html">Genres</a></li>
-				<li><a href="publishers.html">Publishers</a></li>
+				<li><a href="topsales.html">Top Sales</a></li>
+				<li><a href="gamecount.html">Game Count</a></li>
 				<li><a href="machine_learning.html">Machine Learning</a></li>
 				
 			</ul>
@@ -35,27 +35,27 @@
 	
 			<p><img src="https://i.imgur.com/Pgy3AuH.png" alt="Ashley" class="floatleft" width=90 height=80> <h2>Ashley Na</h2></p>
 			
-			<p>Favorite Videogame: </p>
-			<p>Favorite Character: </p>
+			<p>Favorite Videogame: Pokemon / Super Smash Bros. Brawl</p>
+			<p>Favorite Character: Daisy</p>
 
 			<p><img src="https://i.imgur.com/MyU7Y0h.png" alt="Andrew" class="floatleft" width=90 height=80> <h2>Andrew Price</h2></p>
 			
-			<p>Favorite Videogame: </p>
-			<p>Favorite Character: </p>
+			<p>Favorite Videogame: Legend of Zelda: Breath of the Wild</p>
+			<p>Favorite Character: Ness</p>
 
 			<p><img src="https://i.imgur.com/eD8U0bk.png" alt="Ian" class="floatleft" width=90 height=80> <h2>Ian Womack</h2></p>
 			
-			<p>Favorite Videogame: </p>
-			<p>Favorite Character: </p>
+			<p>Favorite Videogame: Horizon: Zero Dawn</p>
+			<p>Favorite Character: Nathan Drake</p>
 
 			<p><img src="https://i.imgur.com/HxGo363.png" alt="Jason" class="floatleft" width=90 height=80> <h2>Jason Lin</h2></p>
 			
-			<p>Favorite Videogame: </p>
-			<p>Favorite Character: </p>
+			<p>Favorite Videogame: Rocket League</p>
+			<p>Favorite Character: Jill Valentine</p>
 
 			<p><img src="https://i.imgur.com/czGrVkl.png" alt="Umu" class="floatleft" width=90 height=80> <h2>Umu Lamboi</h2></p>
 			
-			<p>Favorite Videogame: </p>
+			<p>Favorite Videogame: Pet Resue</p>
 			<p>Favorite Character: </p>
 			
 </section>
