--- a/videogames/templates/mosaic.html
+++ b/videogames/templates/mosaic.html
@@ -23,8 +23,8 @@
 				<li><a href="about.html">About Us</a></li>
 				<li><a href="mosaic.html">Mosaic</a></li>
 				<li><a href="trends.html">Trends</a></li>
-				<li><a href="genres.html">Genres</a></li>
-				<li><a href="publishers.html">Publishers</a></li>
+				<li><a href="topsales.html">Top Sales</a></li>
+				<li><a href="gamecount.html">Game Count</a></li>
 				<li><a href="machine_learning.html">Machine Learning</a></li>
 				
 			</ul>
