Changed section titles

--- a/videogames/templates/topsales.html
+++ b/videogames/templates/topsales.html
@@ -31,7 +31,7 @@
 		</nav>
 		
 		<section id="content">
-			<h1 class="oneup">Genres!</h1>
+			<h1 class="oneup">Top Sales By Metacategories</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacus metus, auctor non porta a, hendrerit elementum mi. Vivamus ac porta lacus. Quisque hendrerit urna id <a href="#">arcu tincidunt commodo</a>. Pellentesque ut dolor quam, mollis molestie nulla. Pellentesque nibh nisl, porta vel vulputate ut, iaculis ac lectus. Maecenas id nisl at orci rutrum hendrerit. Aenean ut arcu erat, eget egestas nunc. Etiam sed eleifend dui.</p>
 			
 			<p><img src="https://pbs.twimg.com/media/DUcziIjXUAAyRAH.jpg" alt="Controllers Image" class="floatr" width=250 height=125> Donec rhoncus orci id odio tristique semper eget in ipsum. Suspendisse potenti. Phasellus luctus quam commodo nisl consequat semper ut auctor elit. Mauris ante justo, tempus eget bibendum in, ullamcorper eu erat.</p>
