--- a/videogames/templates/index.html
+++ b/videogames/templates/index.html
@@ -40,7 +40,7 @@
 			
             <p>We hope you enjoy your experience here.</p> 
             
-			<center><img src="https://imgur.com/ON6YykM" alt="Thanks For Playing Gif" height=70%></center>
+			<center><img src="https://i.imgur.com/ON6YykM.gif" alt="Thanks For Playing Gif" height=70%></center>
 			<center><img src="https://static.fjcdn.com/gifs/So+i+hear+you+like+90s+games_381f92_4779042.gif" alt="Videogame Gif" width=500 height=171></center>
 </section>
 		
