--- a/videogames/templates/about.html
+++ b/videogames/templates/about.html
@@ -56,7 +56,7 @@
 			<p><img src="https://i.imgur.com/czGrVkl.png" alt="Umu" class="floatleft" width=90 height=80> <h2>Umu Lamboi</h2></p>
 			
 			<p>Favorite Videogame: Pet Resue</p>
-			<p>Favorite Character: </p>
+			<p>Favorite Character: Zelda</p>
 			
 </section>
 		
