Edited game count layout

--- a/videogames/templates/gamecount.html
+++ b/videogames/templates/gamecount.html
@@ -30,16 +30,19 @@
 			</ul>
 		</nav>
 		
-		<main>
-			<select>
-				<option selected disabled>Choose...</option>
-				<option>Genre</option>
-				<option>Platform</option>
-				<option>Publisher</option>
-			</select>
-			<figure id="publisher-plot">
-			</figure>
-		</main>
+		<section id="content">
+			<h1 class="oneup">Game Count By Metacategories</h1>
+			<br>
+			<main>
+				<select>
+					<option selected disabled>Choose...</option>
+					<option>Genre</option>
+					<option>Platform</option>
+					<option>Publisher</option>
+				</select>
+				<figure id="publisher-plot"></figure>
+			</main>
+		</section>
 		
 		<footer>
 			<span class="copy"></span>
