--- a/videogames/templates/about.html
+++ b/videogames/templates/about.html
@@ -55,7 +55,7 @@
 
 			<p><img src="https://i.imgur.com/czGrVkl.png" alt="Umu" class="floatleft" width=90 height=80> <h2>Umu Lamboi</h2></p>
 			
-			<p>Favorite Videogame: Pet Resue</p>
+			<p>Favorite Videogame: Pet Rescue</p>
 			<p>Favorite Character: Zelda</p>
 			
 </section>
