--- a/videogames/templates/topsales.html
+++ b/videogames/templates/topsales.html
@@ -39,8 +39,8 @@
 			
 			<p>Quisque a purus nisl. Duis accumsan interdum rutrum. Fusce velit mi, feugiat eu laoreet sed, pellentesque ac augue. Phasellus commodo rhoncus tempor. Donec in turpis eu metus aliquam porttitor nec vitae tortor. Donec eu felis eget arcu interdum viverra rhoncus eget nunc. Etiam sed risus eleifend nisi consequat suscipit et in odio.</p>
 			<img src="https://i.imgur.com/trfTSfM.png" alt="Platform">
-			<img src="https://i.imgur.com/Cmoi1pF.png" alt="Publisher">
-			<img src="https://i.imgur.com/ZMbuiNF.png" alt="Genre">
+			<img src="https://i.imgur.com/Cmoi1pF.png" alt="Publisher" height="708" width="782">
+			<img src="https://i.imgur.com/ZMbuiNF.png" alt="Genre" height="708" width="782">
 	</section>
 		
 		<footer>
