Update img links

--- a/videogames/templates/machine_learning.html
+++ b/videogames/templates/machine_learning.html
@@ -33,7 +33,7 @@
 		<section id="content">
 			<h1 class="oneup">Machine Learning!</h1>
 			<p>We wanted to see if there was a correlation between critic scores and sales of the games. </p>			
-			<p><img src="https://imgur.com/a/UqiAz.png" alt="Critic Score vs Global Sales"></p>
+			<p><img src="https://i.imgur.com/a/UqiAz.png" alt="Critic Score vs Global Sales"></p>
 			<p>It seemed that the higher the critic score, higher the sales.</p>	
 			<br>	
 			<p>We defined a game to be a hit if it sells more than 1 million copies.</p>
@@ -41,8 +41,8 @@
 			<p><i>Training Data Score: 0.82551
 				Testing Data Score: 0.82035</i></p>
 			<p>We applied the prediction model to see which games had the greatest chance to be a "hit" and which didn't.</p>
-			<p><img src="https://imgur.com/a/e3BtR.png" alt="Top 10 Games Probability"></p>
-			<p><img src="https://imgur.com/a/Tyl7q.png" alt="Bottom 10 Games Probability"></p>
+			<p><img src="https://i.imgur.com/a/e3BtR.png" alt="Top 10 Games Probability"></p>
+			<p><img src="https://i.imgur.com/a/Tyl7q.png" alt="Bottom 10 Games Probability"></p>
 	
 		</section>
 		
