--- a/videogames/templates/index.html
+++ b/videogames/templates/index.html
@@ -36,7 +36,7 @@
 			
 			<p><img src="https://pbs.twimg.com/media/DUcziIjXUAAyRAH.jpg" alt="Controllers Image" class="floatr" width=250 height=125> From the Atari 2600 to the XBox One, we'll categorize videogames by platform, publisher, and genre. Which platforms outshine the others? Which publishers release the most games? What genres tend to be most successful? These are several questions we will answer throughout this website.</p>
 			
-			<p>The navigation bar at the top will take you through each level of our analysis, so let's get started!</p>
+			<p>The navigation bar at the top will take you through each level of our analysis. Let's get started!</p>
 			
             <p>We hope you enjoy your experience here.</p> 
             
