--- a/videogames/templates/trends.html
+++ b/videogames/templates/trends.html
@@ -32,9 +32,9 @@
 		
 		<section id="content">
 			<h1 class="oneup">Trends by Year</h1>
-			<p>In this section, we analyze videogame releases over time, broken out by platform. The top chart has markers for every year that a platform has released a videogame so that we can understand the evolution of videogame platforms over time as well as the frequency of videogames released. </p>
+			<p>In this section, we used an embedded Tableau dashboard to analyze videogame releases over time, broken out by platform. The top chart has markers for every year that a platform has released a game and is sorted in chronological order of each platform's release date. </p>
 				
-			<p>You can also click on a particular platform in the top chart and see its sales and game count by year in the charts below.</p>
+			<p>When you click on a particular platform in the top chart, you can see its sales and game count by year in the charts below.</p>
 			
 			
 				
