--- a/videogames/templates/mosaic.html
+++ b/videogames/templates/mosaic.html
@@ -31,10 +31,41 @@
 		</nav>
 		
 		<section id="content">
-			<h1 class="oneup">The Mosaic!</h1>
-			<p>Insert mosaic description here</p>			
-			<p><img src="../img/mosaic4.png" alt="Mosaic Image" width=960 height=480> 
-				
+			<h1 class="oneup">The Mosaics!</h1>
+
+            <hr>
+            <br>
+
+            <center>
+
+                <p><img src="https://i.imgur.com/9YoB9s7.png" alt="Mosaic 1up image" width=960 height=533></p>
+                <h1>This Nintendo mosaic was created in Python using a pool of 767 NES cover art images scraped with URLs extracted from TheGamesDB.net API.</h1>
+
+
+                <!-- zoomed image if we choose to show -->
+                <!-- <p><img src="https://i.imgur.com/ucjOuKy.png" alt="Mosaic 1up Zoom" width=570 height=450></p> -->
+
+                <br>
+                <hr><br>
+
+                <p><img src="https://i.imgur.com/iLYPIY9.png" alt="Mosaic Atari image" width=600 height=800></p>
+                <h1>This Atari mosaic was created in Python using a pool of 798 Atari cover art images scraped with URLs extracted from TheGamesDB.net API.</h1>
+
+
+                <br>
+                <hr><br>
+
+                <p><img src="https://i.imgur.com/Fo723v2.png" alt="Mosaic Poster image" width=960 height=533></p>
+                <h1>This Top Sales mosaic was created in Python using a pool of 2600 cover art images scraped with URLs extracted from TheGamesDB.net API and selected according to highest North American sales for all platforms.
+
+
+                    <br>
+                    <hr><br>
+
+            </center>
+
+            <h1>Python Libraries Used: Pandas, Photomosaic, Numpy, Skimage, Pillow, Urllib</h1>
+
 		</section>
 		
 		<footer>
