--- a/videogames/templates/topsales.html
+++ b/videogames/templates/topsales.html
@@ -32,15 +32,20 @@
 		
 		<section id="content">
 			<h1 class="oneup">Top Sales By Metacategories</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacus metus, auctor non porta a, hendrerit elementum mi. Vivamus ac porta lacus. Quisque hendrerit urna id <a href="#">arcu tincidunt commodo</a>. Pellentesque ut dolor quam, mollis molestie nulla. Pellentesque nibh nisl, porta vel vulputate ut, iaculis ac lectus. Maecenas id nisl at orci rutrum hendrerit. Aenean ut arcu erat, eget egestas nunc. Etiam sed eleifend dui.</p>
+			<p>Looking at the anlysis, there are three main Regional Revenues combined to have a Global_Sales/Revenue. We have the NA, EU and Japan.</p>
 			
 			
-			<p>In turpis orci, tincidunt ut mollis sit amet, fermentum id sapien. Nulla dapibus lacus non est iaculis at luctus nunc porta. Pellentesque dui velit, tempus semper pharetra vel, porta non eros. Nulla dictum gravida tortor, sit amet molestie tellus semper a. Ut cursus hendrerit quam at accumsan.</p>
-			
-			<p>Quisque a purus nisl. Duis accumsan interdum rutrum. Fusce velit mi, feugiat eu laoreet sed, pellentesque ac augue. Phasellus commodo rhoncus tempor. Donec in turpis eu metus aliquam porttitor nec vitae tortor. Donec eu felis eget arcu interdum viverra rhoncus eget nunc. Etiam sed risus eleifend nisi consequat suscipit et in odio.</p>
+
+			<p>Platform generated most revenue per release.</p>
 			<img src="https://i.imgur.com/trfTSfM.png" alt="Platform">
-			<img src="https://i.imgur.com/Cmoi1pF.png" alt="Publisher" height="708" width="782">
-			<img src="https://i.imgur.com/ZMbuiNF.png" alt="Genre" height="708" width="782">
+
+			
+			<p>There are 627 publishers, Nintendo is the top most publisher by revenue and Electronic art coming second.</p>
+			<img src="https://i.imgur.com/Cmoi1pF.png" alt="Publisher">
+
+			
+			<p>Action videogames are the most top Genre in the NA region and second to Sports videogames as well as the same region.</p>
+			<img src="https://i.imgur.com/ZMbuiNF.png" alt="Genre">
 	</section>
 		
 		<footer>
