--- a/videogames/templates/topsales.html
+++ b/videogames/templates/topsales.html
@@ -36,7 +36,7 @@
 			
 			
 
-			<p>Platform generated most revenue per release.</p>
+			<p>Platform is different games release. The PS2 is the highest game played according to our analysis. </p>
 			<img src="https://i.imgur.com/trfTSfM.png" alt="Platform">
 
 			
@@ -44,7 +44,7 @@
 			<img src="https://i.imgur.com/Cmoi1pF.png" alt="Publisher">
 
 			
-			<p>Action videogames are the most top Genre in the NA region and second to Sports videogames as well as the same region.</p>
+			<p>Action is the best Genre sales per release within the NA region and second to Sports as well as in the same region.</p>
 			<img src="https://i.imgur.com/ZMbuiNF.png" alt="Genre">
 	</section>
 		
